// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NoDataCard props button 1`] = `
<div
  css="You have tried to stringify object returned from \`css\` function. It isn't supposed to be used directly (e.g. as value of the \`className\` prop), but rather handed to emotion so it can handle it (e.g. as value of \`css\` prop)."
  data-test-subj="kbnRedirectAppLink"
>
  <div
    class="euiPanel euiPanel--plain euiPanel--paddingLarge euiCard css-1hwq9r9-euiPanel-grow-m-l-plain-hasShadow-isClickable-EuiCard"
  >
    <div
      class="euiCard__main css-1t9ljgw-euiCard__main-vertical"
    >
      <div
        class="euiCard__top css-1hghi78-euiCard__top-vertical"
      >
        <div
          class="euiCard__image css-3ekcfg-euiCard__image"
        >
          <figure
            class="euiImageWrapper css-3m9hxu-euiImageWrapper-fullWidth"
          >
            <img
              alt=""
              class="euiImage css-dhoeyf-euiImage-fullWidth"
              src="test-file-stub"
              style="width:max(100%, 360px);height:240px;object-fit:cover;background:aliceblue"
            />
          </figure>
        </div>
      </div>
      <div
        class="euiCard__content css-jolp8x-euiCard__content-vertical"
      >
        <p
          class="euiTitle euiCard__title css-1422kbt-euiTitle-s"
          id="generated-idTitle"
        >
          <a
            aria-describedby="generated-idDescription"
            class="euiCard__titleAnchor css-t68l8w-euiCard__text-center-interactive"
            href="/app/integrations/browse"
            rel="noreferrer"
          >
            <span
              class="css-gb1zbv-euiScreenReaderOnly"
            >
              Card title
            </span>
          </a>
        </p>
        <div
          class="euiText css-mtv1pd-euiText-s-euiCard__description"
          id="generated-idDescription"
        >
          <p>
            Description
          </p>
        </div>
      </div>
      <div
        class="css-sec0wf-euiCard__footer"
      >
        <a
          class="euiButton css-1ew06m2-euiButtonDisplay-m-defaultMinWidth-fill-primary"
          data-test-subj="noDataDefaultFooterAction"
          href="/app/integrations/browse"
          rel="noreferrer"
        >
          <span
            class="css-cf8eum-euiButtonDisplayContent"
          >
            <span
              class="eui-textTruncate"
            >
              Button
            </span>
          </span>
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`NoDataCard props extends EuiCardProps 1`] = `
<div
  css="You have tried to stringify object returned from \`css\` function. It isn't supposed to be used directly (e.g. as value of the \`className\` prop), but rather handed to emotion so it can handle it (e.g. as value of \`css\` prop)."
  data-test-subj="kbnRedirectAppLink"
>
  <div
    class="euiPanel euiPanel--plain euiPanel--paddingLarge euiCard custom_class css-1hwq9r9-euiPanel-grow-m-l-plain-hasShadow-isClickable-EuiCard"
  >
    <div
      class="euiCard__main css-1t9ljgw-euiCard__main-vertical"
    >
      <div
        class="euiCard__top css-1hghi78-euiCard__top-vertical"
      >
        <div
          class="euiCard__image css-3ekcfg-euiCard__image"
        >
          <figure
            class="euiImageWrapper css-3m9hxu-euiImageWrapper-fullWidth"
          >
            <img
              alt=""
              class="euiImage css-dhoeyf-euiImage-fullWidth"
              src="test-file-stub"
              style="width:max(100%, 360px);height:240px;object-fit:cover;background:aliceblue"
            />
          </figure>
        </div>
      </div>
      <div
        class="euiCard__content css-jolp8x-euiCard__content-vertical"
      >
        <p
          class="euiTitle euiCard__title css-1422kbt-euiTitle-s"
          id="generated-idTitle"
        >
          <a
            aria-describedby="generated-idDescription"
            class="euiCard__titleAnchor css-t68l8w-euiCard__text-center-interactive"
            href="/app/integrations/browse"
            rel="noreferrer"
          >
            <span
              class="css-gb1zbv-euiScreenReaderOnly"
            >
              Card title
            </span>
          </a>
        </p>
        <div
          class="euiText css-mtv1pd-euiText-s-euiCard__description"
          id="generated-idDescription"
        >
          <p>
            Description
          </p>
        </div>
      </div>
      <div
        class="css-sec0wf-euiCard__footer"
      >
        <a
          class="euiButton css-1ew06m2-euiButtonDisplay-m-defaultMinWidth-fill-primary"
          data-test-subj="noDataDefaultFooterAction"
          href="/app/integrations/browse"
          rel="noreferrer"
        >
          <span
            class="css-cf8eum-euiButtonDisplayContent"
          >
            <span
              class="eui-textTruncate"
            >
              Button
            </span>
          </span>
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`NoDataCard props href 1`] = `
<div
  css="You have tried to stringify object returned from \`css\` function. It isn't supposed to be used directly (e.g. as value of the \`className\` prop), but rather handed to emotion so it can handle it (e.g. as value of \`css\` prop)."
  data-test-subj="kbnRedirectAppLink"
>
  <div
    class="euiPanel euiPanel--plain euiPanel--paddingLarge euiCard css-1hwq9r9-euiPanel-grow-m-l-plain-hasShadow-isClickable-EuiCard"
  >
    <div
      class="euiCard__main css-1t9ljgw-euiCard__main-vertical"
    >
      <div
        class="euiCard__top css-1hghi78-euiCard__top-vertical"
      >
        <div
          class="euiCard__image css-3ekcfg-euiCard__image"
        >
          <figure
            class="euiImageWrapper css-3m9hxu-euiImageWrapper-fullWidth"
          >
            <img
              alt=""
              class="euiImage css-dhoeyf-euiImage-fullWidth"
              src="test-file-stub"
              style="width:max(100%, 360px);height:240px;object-fit:cover;background:aliceblue"
            />
          </figure>
        </div>
      </div>
      <div
        class="euiCard__content css-jolp8x-euiCard__content-vertical"
      >
        <p
          class="euiTitle euiCard__title css-1422kbt-euiTitle-s"
          id="generated-idTitle"
        >
          <a
            aria-describedby="generated-idDescription"
            class="euiCard__titleAnchor css-t68l8w-euiCard__text-center-interactive"
            href="#"
            rel="noreferrer"
          >
            <span
              class="css-gb1zbv-euiScreenReaderOnly"
            >
              Card title
            </span>
          </a>
        </p>
        <div
          class="euiText css-mtv1pd-euiText-s-euiCard__description"
          id="generated-idDescription"
        >
          <p>
            Description
          </p>
        </div>
      </div>
      <div
        class="css-sec0wf-euiCard__footer"
      >
        <a
          class="euiButton css-1ew06m2-euiButtonDisplay-m-defaultMinWidth-fill-primary"
          data-test-subj="noDataDefaultFooterAction"
          href="#"
          rel="noreferrer"
        >
          <span
            class="css-cf8eum-euiButtonDisplayContent"
          >
            <span
              class="eui-textTruncate"
            >
              Button
            </span>
          </span>
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`NoDataCard props no access to Fleet 1`] = `
<div
  css="You have tried to stringify object returned from \`css\` function. It isn't supposed to be used directly (e.g. as value of the \`className\` prop), but rather handed to emotion so it can handle it (e.g. as value of \`css\` prop)."
  data-test-subj="kbnRedirectAppLink"
>
  <div
    class="euiPanel euiPanel--subdued euiPanel--paddingLarge euiCard css-1qdz9pu-euiPanel-grow-m-l-subdued-EuiCard"
  >
    <div
      class="euiCard__main css-1t9ljgw-euiCard__main-vertical"
    >
      <div
        class="euiCard__top css-8k4n0b-euiCard__top-vertical-disabled"
      >
        <div
          class="euiCard__image css-3ekcfg-euiCard__image"
        >
          <figure
            class="euiImageWrapper css-3m9hxu-euiImageWrapper-fullWidth"
          >
            <img
              alt=""
              class="euiImage css-dhoeyf-euiImage-fullWidth"
              src="test-file-stub"
              style="width:max(100%, 360px);height:240px;object-fit:cover;background:aliceblue"
            />
          </figure>
        </div>
      </div>
      <div
        class="euiCard__content css-jolp8x-euiCard__content-vertical"
      >
        <p
          class="euiTitle euiCard__title css-1422kbt-euiTitle-s"
          id="generated-idTitle"
        >
          <button
            aria-describedby=" generated-idDescription"
            class="euiCard__titleButton css-10swnxw-euiCard__text-center-disabled"
            disabled=""
          >
            <span
              class="css-7fidck-euiTextColor-default"
            >
              Contact your administrator
            </span>
          </button>
        </p>
        <div
          class="euiText css-mtv1pd-euiText-s-euiCard__description"
          id="generated-idDescription"
        >
          <p>
            <span
              class="css-7fidck-euiTextColor-default"
            >
              This integration is not yet enabled. Your administrator has the required permissions to turn it on.
            </span>
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`NoDataCard renders 1`] = `
<div
  css="You have tried to stringify object returned from \`css\` function. It isn't supposed to be used directly (e.g. as value of the \`className\` prop), but rather handed to emotion so it can handle it (e.g. as value of \`css\` prop)."
  data-test-subj="kbnRedirectAppLink"
>
  <div
    class="euiPanel euiPanel--plain euiPanel--paddingLarge euiCard css-1hwq9r9-euiPanel-grow-m-l-plain-hasShadow-isClickable-EuiCard"
  >
    <div
      class="euiCard__main css-1t9ljgw-euiCard__main-vertical"
    >
      <div
        class="euiCard__top css-1hghi78-euiCard__top-vertical"
      >
        <div
          class="euiCard__image css-3ekcfg-euiCard__image"
        >
          <figure
            class="euiImageWrapper css-3m9hxu-euiImageWrapper-fullWidth"
          >
            <img
              alt=""
              class="euiImage css-dhoeyf-euiImage-fullWidth"
              src="test-file-stub"
              style="width:max(100%, 360px);height:240px;object-fit:cover;background:aliceblue"
            />
          </figure>
        </div>
      </div>
      <div
        class="euiCard__content css-jolp8x-euiCard__content-vertical"
      >
        <p
          class="euiTitle euiCard__title css-1422kbt-euiTitle-s"
          id="generated-idTitle"
        >
          <a
            aria-describedby="generated-idDescription"
            class="euiCard__titleAnchor css-t68l8w-euiCard__text-center-interactive"
            href="/app/integrations/browse"
            rel="noreferrer"
          >
            <span
              class="css-gb1zbv-euiScreenReaderOnly"
            >
              Card title
            </span>
          </a>
        </p>
        <div
          class="euiText css-mtv1pd-euiText-s-euiCard__description"
          id="generated-idDescription"
        >
          <p>
            Description
          </p>
        </div>
      </div>
      <div
        class="css-sec0wf-euiCard__footer"
      >
        <a
          class="euiButton css-1ew06m2-euiButtonDisplay-m-defaultMinWidth-fill-primary"
          data-test-subj="noDataDefaultFooterAction"
          href="/app/integrations/browse"
          rel="noreferrer"
        >
          <span
            class="css-cf8eum-euiButtonDisplayContent"
          >
            <span
              class="eui-textTruncate"
            >
              Card title
            </span>
          </span>
        </a>
      </div>
    </div>
  </div>
</div>
`;
